<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hemanth.notepadassg3.activities.AboutActivity"
    tools:showIn="@layout/activity_about">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="?attr/colorPrimary"
        android:title="@string/about"
        app:titleTextColor="@color/card_bg"
        app:layout_constraintHeight_min="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            android:paddingTop="8dp"
            android:text="@string/app_name"
            android:textColor="@color/card_bg"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            android:paddingTop="8dp"
            android:text="@string/_2017_hemanth_balakrishna"
            android:textColor="@color/card_bg"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            android:paddingTop="8dp"
            android:text="@string/version_1_0"
            android:textColor="@color/card_bg"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

